# KYNYKOS_AI_Agent

./: .env.example  .gitignore  FINAL_STATUS.md  README.md  fly.toml  pyproject.toml  repository_name.txt  requirements.txt
.github/workflows/: claude-code.yml
03_RFC/: RFC-0000-unificacion-kynicos-sac.md
07_AUDIT_TRAIL/: LOGBOOK.md
app/: main.py
app/agents/: concierge_loop.py
app/channels/: __init__.py  whatsapp_evolution.py
app/cloud/: backup_service.py  mcp_server.py  providers.py  sessions.py  telegram_bot.py  whatsapp_bridge.py
app/concierge/: persona.py
app/config/: __init__.py  llm_config.yaml  schema.py
app/core/: context.py  explorer.py  loop.py  memory.py  sentinel.py  skill_engine.py  tools.py
app/services/: llm_router.py
app/skills/: __init__.py  hvac_triage.py  mueve_cancun.py  skill_builder.py
app/utils/: logger.py
docs/: LLM_ROUTER_SETUP.md
infrastructure/: Dockerfile  docker-compose.yml  render.yaml
scripts/: generate_doc.py  start_kynikos.bat
tests/: test_agent_loop.py  test_config.py  test_config_loading.py  test_cors_logic.py  test_dashboard.py  test_explorer.py  test_hvac_triage.py  test_integration_llm_router.py  test_llm_router.py  test_mcp_server.py  test_mcp_server_minimal.py  test_memory.py  test_mueve_cancun.py  test_persona_unit.py  test_phase2.py  test_provider_fallback.py  test_providers.py  test_security_fixes.py  test_sentinel.py  test_sessions.py  test_skill_memory_manager.py  test_token_tracker.py  test_tools.py  test_whatsapp_bridge.py
upload-repo/: languini-snippets.md
workspace/: AGENTS.md  CHRONICLE_OF_SOVEREIGNTY.md  KYNIKOS_MASTER_ARCH.md  SOUL.md  USER.md
workspace/memory/: MEMORY.md
workspace/skills/calculator/: SKILL.md
workspace/skills/datetime-helper/: SKILL.md
workspace/skills/file-manager/: SKILL.md
workspace/skills/last30days-skill/: SKILL.md
workspace/skills/roi-analyst/: SKILL.md
workspace/skills/wms-expert/: SKILL.md
