[tool.poetry]
name = "kynykos-ai-agent"
version = "0.2.0"
description = "KynycOS AI Operating System"
authors = ["JULIANJUAREZMX01"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-telegram-bot = "^21.0"
groq = "^0.11.0"
anthropic = "^0.36.0"
pydantic-settings = "^2.5.0"
loguru = "^0.7.0"
tenacity = "^9.0.0"
boto3 = "^1.34.0"
httpx = "^0.27.0"
pyodbc = "^5.1.0"
qrcode = {extras = ["pil"], version = "^7.4.0"}
googletrans = "^4.0.0rc1"
gTTS = "^2.5.0"
Pillow = "^10.0.0"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

